# Movie-Bot

./: .env.dev  .env.example  Dockerfile  all_users.txt  docker-compose.yml  pyproject.toml
src/app/: main.py
src/app/common/: genres.py  relferal_id_generator.py
src/app/core/: config.py
src/app/database/: core.py  database_backup.py  database_dsn.py  models.py
src/app/database/queries/: backup.py  bots.py  channels.py  referral.py  user.py
src/app/database/queries/movie/: favorite_movies.py  feature_films.py  mini_series.py  series.py  top_movies.py
src/app/dialog/: dialogs.py  getters.py  handlers.py
src/app/dialog/admin/: __init__.py  add_movie.py  backup.py  edit_movie.py  main.py  referral.py
src/app/filters/: check_channel_sub.py
src/app/handlers/: __init__.py  start.py
src/app/handlers/admin/: __init__.py  check.py  check_sub_channel.py  commands.py  mandatory_subs.py
src/app/handlers/user/: favorite_movies.py  movie_by_code.py  movie_search.py  player.py
src/app/keyboards/: callback_data.py  inline.py  replay.py
src/app/middleware/: __init__.py  database_pool.py
src/app/repositories/: repository.py
src/app/services/: broadcaster.py  cache_service.py  view_tracker.py
src/app/states/admin/: dialogs.py  referral.py
src/app/states/user/: dialogs.py
